# cs20231_g6

./: .gitignore  README.md  construcaoDeSoftwareProjeto.md  modelo_documento_estoria_usuario.md
.github/workflows/: deploy.yml
Artefatos/Backlog_Sprint/: modelo_backlog_sprint.md
Artefatos/Historias_Usuario/: HU002_Controlar_Acesso.md  HU003_Controlar_Fluxos.md  HU004_Criar_Tarefas.md  HU005_Atualizar_Tarefa.md  HU006_Visualizar_Tarefa.md  modelo_documento_estoria_usuario.md
Back/: .env  README.md  auth_user.py  config.py  depends.py  main.py  pyproject.toml  routes.py  schemas.py
Back/controller/: routes.py  usuario_controller.py
Back/database/: connection.py  depends.py  models.py  session.py
Back/migrations/: env.py
Back/migrations/versions/: 2af7f555758f_add_usuario_table.py  76b46d3e7913_foreign_key.py  7b3651ae27cc_tabela_usuario_login.py  932e82eedf60_sync.py
Back/model/: schemas.py  usuario.py
Back/services/: comentario_service.py  etapa_service.py  projeto_service.py  tarefa_service.py  usuario_service.py
Back/tests/: conftest.py
Back/tests/api/: test_gets.py  test_home.py
Front/notesync/: next.config.js  package-lock.json  package.json  tsconfig.json
Front/notesync/app/: layout.tsx  page.tsx
Front/notesync/components/: Board.tsx  Board2.tsx  Column.tsx  DemoTable.tsx  Header.tsx  draAndDrop.tsx  inputField.tsx  user-auth-form.tsx  user-login-form.tsx
Front/notesync/services/: api.jsx
Front/notesync/store/: BoardStore.ts
backend/: pom.xml
diagramas/: diagramaDeClasses.md
organizacao/: fluxoDeAtividades.md
(+32 files in other folders)
